# strompreise-app

./: .gitignore  ENTSOE.xml  README.md  Strompreise.ipynb  app.py  entsoe_sample.xml  plot_functions.py  price-sources.py  price_sources.py  pyproject.toml  requirements.txt
