[project]
name = "strompreise-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "streamlit>=1.50.0",
    "streamlit-plotly-events>=0.0.6",
]
